# birds-eye

./: .gitignore  Cargo.toml  LICENSE  README.md  mkdocs.yml
.claude/: launch.json
.github/workflows/: docs.yml
docs/: CNAME  architecture.md  audit-2026-07-03.md  brand.md  dedup-indexing-strategy.md  desktop.md  duplicate-cleanup.md  guide.md  index.md  indexing-upgrade.md  indexing.md  msix-store-submission.md  native-api.md  reference-example.html  reimagine.md  schema.sql  visual-cleanup-roadmap.md
docs/assets/: extra.css
docs/develop/: architecture.md  building.md  contributing.md  releasing.md
docs/goal/: Birds Eye Architectures.dc.html  Birds Eye Workspace.dc.html
docs/guide/: getting-started.md  the-workspace.md  working-safely.md
docs/superpowers/plans/: 2026-05-26-birds-eye-ontology-wave-1-foundation.md  2026-05-28-birds-eye-ontology-wave-1-populators-orchestrator.md
docs/superpowers/specs/: 2026-05-14-workspace-ui-design.md  2026-05-26-birds-eye-ontology-chapters-1-6.md  2026-05-26-birds-eye-ontology-wave-1-design.md  2026-05-26-birds-eye-ontology-wave-2-vision.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: TreemapCanvas.tsx  domain.ts  main.tsx  nativeClient.ts  router.tsx  scanWorker.ts  styles.css
frontend/src/__tests__/: scanMode.test.ts
frontend/src/components/: AnalysisSection.tsx  AppShell.tsx  AuditQueue.tsx  BottomRail.tsx  BulkTriageGrid.tsx  CommandPalette.tsx  ComparisonPanel.tsx  ConfigDropdown.tsx  DetailGrid.tsx  DuplicateWorkbench.tsx  DuplicatesSection.tsx  FileProvenance.tsx  FilterBar.tsx  FoldersTable.tsx  IndexesSection.tsx  LandingPage.tsx  MediaPreview.tsx  MetricGrid.tsx  NexusCanvas.tsx  OntologyEnablePrompt.tsx  ProceduralStorageField.tsx  QueuePopover.tsx  ResizablePanel.tsx  ScanDetail.tsx  ScanLanding.tsx  ScanList.tsx  ScanLog.tsx  ScanMetrics.tsx  ScanStrip.tsx  ScanToast.tsx  ScrollableRows.tsx  SearchPanel.tsx  SettingsPopover.tsx  Sidebar.tsx  SmartMovesPanel.tsx  StorageReadout.tsx  TopBar.tsx  TopNavigation.tsx  TrashProgress.tsx  TreemapCanvas.tsx  (+2 more)
frontend/src/context/: ScanContext.tsx
frontend/src/hooks/: useAuditQueue.ts  useDuplicates.ts  useNativeRuntime.ts  useOntology.ts  useSavedIndexes.ts  useScan.ts  useSearch.ts
frontend/src/pages/: CleanupPage.tsx  DiscoveriesPage.tsx  HomePage.tsx  LibraryPage.tsx  RecentlyCleanedPage.tsx  SavedViewsPage.tsx  ScanPage.tsx  WorkspacePage.tsx
frontend/src/test/: CleanupPage.test.tsx  CommandPalette.test.tsx  ComparisonPanel.test.tsx  ConfigDropdown.test.tsx  DiscoveriesPage.test.tsx  FileProvenance.test.tsx  MediaPreview.test.tsx  OntologyEnablePrompt.test.tsx  RecentlyCleanedPage.test.tsx  ScanContext.test.tsx  (+12 more)
scripts/: build-macos.sh  build-msix.ps1  record-demo.md
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  Package.appxmanifest  tauri.conf.json  tauri.workspace.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/index/: mod.rs  schema.rs  writer.rs
src/native/: api.rs  jobs.rs  lockinfo.rs  macos_trash.rs  mod.rs  phase_timer.rs
src/ontology/: attrs.rs  discoveries.rs  discoveries_resolve.rs  enabled.rs  entities.rs  errors.rs  mod.rs  negative.rs  orchestrator.rs  pinning.rs  relations.rs  saved_views.rs  sensitivity.rs  vocabulary.rs
src/scanner/: mod.rs  types.rs  worker.rs
tests/: ontology_cleanup.rs  ontology_foundation.rs  ontology_populators.rs
workspace/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
workspace/src/: App.tsx  index.css  main.tsx
(+83 files in other folders)
