[package]
name = "birds-eye"
version = "0.1.0"
edition = "2021"
description = "Native disk space intelligence platform scanner core"
license = "MIT"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }

[lib]
name = "birds_eye"
path = "src/lib.rs"

[[bin]]
name = "birds-eye-scan"
path = "src/main.rs"
