[package]
name = "birds-eye"
version = "0.2.1"
edition = "2021"
description = "Native disk space intelligence platform scanner core"
license = "MIT"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rayon = "1"
trash = "3"

[target.'cfg(windows)'.dependencies]
# Restart Manager: name the processes holding a locked file.
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_RestartManager"] }

[lib]
name = "birds_eye"
path = "src/lib.rs"

[[bin]]
name = "birds-eye-scan"
path = "src/main.rs"
