[package]
name = "birds-eye-desktop"
version = "0.1.0"
edition = "2021"
description = "Birds Eye desktop shell"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
birds-eye = { path = ".." }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
winapi = { version = "0.3", features = ["shellapi"] }
