[package]
name = "birds-eye-desktop"
version = "0.2.1"
edition = "2021"
description = "Birds Eye desktop shell"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
birds-eye = { path = ".." }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
